# bindoj

./: .editorconfig  .gitignore  .gitmodules  .vercelignore  LICENSE  Makefile  NOTICE  README.md  bindoj.opam  codegen.opam  dune-project
example/docs/: dune
example/ex01/src/: apidir.ml  dune  typedesc.ml  typedesc_generated.ml
example/for_dev/: apidir_examples-dune.inc  dune  objintf_examples-dune.inc  typedesc_examples-dune.inc
example/for_dev/generator/: dune  dune_file_parts.ml  duneinc_generator.ml  openapi_listing_generator.ml
example/objintf_jsoo_sameworld/mlsrc/: desc.ml  dune  usage.ml
example/shared/: apidir.ml  client.ml  dune  mock_database.ml  server.ml  typedesc_generated.ml
lib/: dune
lib/gen_lib/: datatype_desc.ml  datatype_desc.mli  dune  utils.ml
src/lib_apidir_runtime/: apidir_base.ml  apidir_base.mli  apidir_client.ml  apidir_client.mli  apidir_server_bridge.ml  apidir_server_bridge.mli  bindoj_apidir_runtime.ml  dune  utils.ml
src/lib_apidir_runtime/unit_test/: dune  lib_apidir_runtime_test.ml  test_utils.ml
src/lib_apidir_shared/unit_test/: dune  duplicated_registration_test.ml  run.ml  sample_apidir_01.ml  test_utils.ml
src/lib_codec/unit_test/: coretypes.ml  dune  json.ml  of_json_error.ml
src/lib_gen/: caml_datatype.ml  caml_datatype.mli  dune  emitter.ml  generator.ml  generator.mli  json_codec.ml  json_codec.mli  utils.ml
src/lib_gen/config/: dune  json_config.ml  json_config.mli
src/lib_gen/unit_test/: dune  json_codec.ml  json_schema.ml  lib_gen_test.ml  of_json_error.ml
src/lib_gen_ts/unit_test/: README.md  dune  lib_gen_ts_test.ml
src/lib_objintf_gen/: bridge_labels.ml  caml_bridge.ml  caml_bridge.mli  dune
src/lib_objintf_gen_jsoo/: dune  jsoo_full_bridge.ml  jsoo_full_bridge.mli
src/lib_objintf_gen_jsoo/config/: dune  objintf_config.ml  objintf_config.mli
src/lib_objintf_gen_ts/: dune  ts_bridge.ml  ts_bridge.mli
src/lib_objintf_gen_utils/: bindoj_objintf_gen_utils.ml  dune
src/lib_openapi/: dune  v3.ml  v3_1.ml
src/lib_openapi/components_object/: dune  v3.ml  v3.mli
src/lib_openapi/example_object/: dune  v3.ml  v3.mli
src/lib_openapi/external_documentation_object/: dune  v3.ml  v3.mli
src/lib_openapi/header_object/: dune  v3.ml  v3.mli
src/lib_openapi/info_object/: dune  v3.ml  v3.mli
src/lib_openapi/link_object/: dune  v3.ml  v3.mli
src/lib_openapi/parameter_object/: dune  v3.ml  v3.mli
src/lib_openapi/path_item/: dune  v3.ml  v3.mli
src/lib_openapi/reference_object/: dune  v3.ml  v3.mli
src/lib_openapi/request_body_object/: dune  v3.ml  v3.mli
src/lib_openapi/response_object/: dune  v3.ml  v3.mli
src/lib_openapi/schema_object/: dune  v3.ml  v3.mli  v3_1.ml  v3_1.mli
src/lib_openapi/security_requirement_object/: dune  v3.ml  v3.mli
src/lib_openapi/security_scheme_object/: dune  v3.ml  v3.mli
src/lib_openapi/server_object/: dune  v3.ml  v3.mli
src/lib_openapi/style_value/: dune  v3.ml  v3.mli
src/lib_openapi/tag_object/: dune  v3.ml  v3.mli
src/lib_openapi/util/: dune  v3.ml  v3.mli
src/lib_test_common/: apidir_examples.ml  dune  of_json_error_examples.ml  typedesc_examples.ml  typedesc_generated_examples.ml
src/lib_test_common/apidir_examples/: all.ml  dune  sample_apidir_01.ml  sample_apidir_01_no_mangling.ml  sample_apidir_02.ml  sample_apidir_03.ml  sample_apidir_04.ml  sample_apidir_05.ml  sample_apidir_06.ml  utils.ml
src/lib_test_common/jsoo_utils/: bindoj_test_common_jsoo_utils.ml  dune
src/lib_test_common/objintf_examples/: all.ml  dune  ex_objintf_empty.ml  ex_objintf_one_directional.ml  ex_objintf_simple_types.ml  ex_objintf_system_io.ml  utils.ml
src/lib_test_common/typedesc_examples/: all.ml  dune  ex01.ml  ex01_inherited_mangling.ml  ex02.ml  ex02_inherited_mangling.ml  ex02_no_mangling.ml  ex02_reused.ml  ex03.ml  ex03_objtuple.ml  ex04.ml  ex05.ml  ex05_notuple.ml  ex06.ml  ex07.ml  ex08.ml  ex09.ml  ex10.ml  ex11.ml  ex12.ml  ex13.ml  ex14.ml  ex15.ml  ex16.ml  ex17.ml  ex18.ml  ex19.ml  ex20.ml  ex_alias.ml  ex_coretype.ml  ex_ident.ml  ex_mangling.ml  ex_nested.ml  ex_nested_multiply.ml  ex_optional.ml  ex_record.ml  ex_variant.ml  ex_version_substring.ml  util.ml
src/lib_test_common/typedesc_generated_examples/: all.ml  dune  ex01.ml  ex01_inherited_mangling.ml  ex02.ml  ex02_inherited_mangling.ml  ex02_no_mangling.ml  ex02_reused.ml  ex03.ml  ex03_objtuple.ml  ex04.ml  ex05.ml  ex05_notuple.ml  ex06.ml  ex07.ml  ex08.ml  ex09.ml  ex10.ml  ex11.ml  ex12.ml  ex13.ml  ex14.ml  ex15.ml  ex16.ml  ex17.ml  ex18.ml  ex19.ml  ex20.ml  ex_alias.ml  ex_coretype.ml  ex_ident.ml  ex_mangling.ml  ex_nested.ml  ex_nested_multiply.ml  ex_optional.ml  ex_record.ml  ex_variant.ml  ex_version_substring.ml  sample_value.ml  util.ml
src/lib_test_common/unit_test/: comparing_of_json.ml  dune  json_discriminator_value_test.ml
with_js/: .eslintrc.json  .gitignore  .redocly.yaml  README.md  dune  package.json  tsconfig.json
with_js/apidir-tests/: apidir-tests-dune.inc  dune
with_js/apidir-typescript-tests/: .gitignore  apidir-typescript-tests-dune.inc  dune
with_js/apidir-typescript-tests/tests/: lib.ts  sample_apidir_01.test.ts  sample_apidir_01_no_mangling.test.ts  sample_apidir_02.test.ts  sample_apidir_03.test.ts  sample_apidir_04.test.ts  sample_apidir_05.test.ts  sample_apidir_06.test.ts
with_js/compile-tests/: .gitignore  compile-tests-dune.inc  dune
with_js/import/: .gitignore  dune  js.ml  json_schema_faker.mli  jsonschema.mli  ts2ocaml.mli
with_js/jsoo-gen/: dune
with_js/jsoo-integration-tests/: dune  js.ml  run.ml
with_js/objintf-tests/: dune  objintf-tests-dune.inc
with_js/rescript/: .gitignore  bsconfig.json  dune  package.json
with_js/src/: index.ts
with_js/unit-tests/: ex01.test.ts  ex02.test.ts  ex03.test.ts  ex03_objtuple.test.ts  ex04.test.ts  ex05.test.ts  ex06.test.ts  ex07.test.ts  ex08.test.ts  ex_alias.test.ts  ex_coretype.test.ts  ex_ident.test.ts  ex_mangling.test.ts  ex_nested.test.ts  ex_nested_multiply.test.ts  ex_optional.test.ts  ex_record.test.ts  ex_variant.test.ts  ex_version_substring.test.ts  helper.ts
(+404 files in other folders)
