opam-version: "2.0"
synopsis: "TODO"
maintainer: "Replace Me <dummy@example.com>"
authors: "Replace Me <dummy@example.com>"
homepage: "https://github.com/kxcteam/bindoj"
bug-reports: "https://github.com/kxcteam/bindoj/issues"

depends: [
  "ocaml" {>= "4.12"}
  "ppxlib" {>= "0.26"}
  "jsonm" {>= "1.0"}
  "yojson" {>= "1.7"}
  "ppx_inline_test" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
