(rule
 (alias node_modules)
 (deps
  (sandbox none)
  (source_tree src)
  (glob_files *))
 (action
  (progn
   (run yarn install --frozen-lockfile)
   (run yarn clean))))

(rule
 (alias runtest)
 (deps
  (sandbox none)
  (alias node_modules)
  (alias compile-tests/gen)
  (alias apidir-typescript-tests/gen_mock_server)
  (source_tree unit-tests)
  (source_tree public-packages)
  (source_tree apidir-typescript-tests/tests))
 (action
  (progn
   (run yarn install --frozen-lockfile)
   (run yarn test))))

(dirs :standard \ node_modules)
