(rule
 (alias init)
 (targets (dir node_modules))
 (deps package.json yarn.lock tsconfig.json)
 (action (run yarn install --frozen-lockfile)))

(rule
 (alias runtest)
 (deps
  (sandbox none)
  node_modules
  (alias compile-tests/gen)
  (alias apidir-tests/gen)
  (alias apidir-typescript-tests/gen)
  (alias jsoo-gen/jsoo_gen)
  (source_tree unit-tests)
  (source_tree public-packages)
  (source_tree apidir-typescript-tests/tests)
  (source_tree compile-tests/reused_types)
  (source_tree jsoo-gen/tests))
 (action
  (progn
   (run yarn test))))

(dirs :standard \ node_modules)
