(library
 (name bindoj_apidir_runtime)
 (public_name bindoj.apidir_runtime)
 (instrumentation (backend bisect_ppx))
 (libraries
  kxclib
  bindoj_base
  bindoj_codec
  bindoj_typedesc
  bindoj_apidir_shared
  prr
  yojson
  jsonm
  (re_export bindoj.runtime))
 (flags (:standard
          -open Kxclib)))
