(library
 (name bindoj_gen)
 (public_name bindoj.gen)
 (instrumentation (backend bisect_ppx))
 (libraries
  bindoj_gen_config
  bindoj_base
  bindoj_codec
  bindoj_openapi
  bindoj_ppxlib_utils
  kxclib)
 (preprocess
  (pps ppxlib.metaquot))
 (private_modules utils)
 (flags (:standard -open Kxclib)))
