(library
 (name bindoj_test_common)
 (libraries
  bindoj_test_common_typedesc_examples
  bindoj_test_common_typedesc_generated_examples
  bindoj_test_common_apidir_examples
  bindoj_gen bindoj_gen_foreign bindoj_base bindoj_typedesc ppxlib)
 (preprocess
  (pps ppxlib.metaquot))
 (flags (:standard -open Kxclib)))
