(rule
 (alias dune-gen)
 (mode (promote))
 (action (diff apidir-typescript-tests-dune.inc apidir-typescript-tests-dune.inc.gen)))
(rule
 (target apidir-typescript-tests-dune.inc.gen)
 (action (with-stdout-to %{target}
          (run gen/duneinc_generator.exe -target %{target}))))
(include apidir-typescript-tests-dune.inc)
