(rule
 (alias gen)
 (target ex01_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex01_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex02_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex03_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex03_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex04_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex04_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
