(rule
 (alias gen)
 (target ex01_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex01_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex01_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex02_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex03_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex03_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex03_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex04_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex04_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex04_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex05_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex05_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex05_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex06_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex06_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex06_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex07_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex07_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex07_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))
