(rule
 (alias gen)
 (target ex01_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex01_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex01_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex01_inherited_mangling_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex01_inherited_mangling_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex01_inherited_mangling_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex02_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex02_reused_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_reused_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_reused_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex02_no_mangling_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_no_mangling_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_no_mangling_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex02_inherited_mangling_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_inherited_mangling_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex02_inherited_mangling_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex03_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex03_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex03_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex03_objtuple_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex03_objtuple_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex03_objtuple_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex04_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex04_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex04_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex05_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex05_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex05_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex05_notuple_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex05_notuple_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex05_notuple_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex06_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex06_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex06_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex07_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex07_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex07_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex08_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex08_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex08_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex09_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex09_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex09_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex10_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex10_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex10_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex11_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex11_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex11_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex12_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex12_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex12_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex13_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex13_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex13_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex14_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex14_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex14_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex15_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex15_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex15_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex16_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex16_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex16_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex17_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex17_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex17_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))

(rule
 (alias gen)
 (target ex18_gen.ts)
 (deps %{exe:../../src/lib_gen_ts/unit_test/gen/gen.exe})
 (action (with-stdout-to %{target} (run %{deps} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex18_examples.json)
 (action (with-stdout-to %{target} (run %{exe:./json/gen.exe} %{target})))
 (mode (promote (until-clean))))
(rule
 (alias gen)
 (target ex18_schema.json)
 (action (with-stdout-to %{target} (run %{exe:./schema/gen.exe} %{target})))
 (mode (promote (until-clean))))
