(executable
 (name run)
 (libraries
  bindoj_withjs_import
  js_of_ocaml
  bindoj_test_common
  bindoj_base
  bindoj_codec
  alcotest
  yojson
  kxclib
  ojs)
 (modes js)
 (optional)
 (preprocess (pps js_of_ocaml-ppx ppx_inline_test))
 (js_of_ocaml)
 (flags (:standard -open Kxclib -w -58)))

(rule
 (alias runtest)
 (deps
  (sandbox none)
  (:test (file ./run.bc.js))
  ../node_modules
  (alias ../compile-tests/gen))
 (action
  (progn
   (run yarn --cwd ../ build)
   (run node %{test}))))
